# PLL_lib_project

./: .gitignore  MANIFEST.in  README.md  setup.cfg  testgl.py
.github/workflows/: python-publish.yml
Examples/: communicating_with_arduino.py  half_period.ino  picoscope_basic_usage.py  picoscope_saving_data.py  picoscope_with_options.py  piscoscope_and_arduino.py  plotting_results.py
src/PLL_Lib/: __init__.py  arduino.py  constants.py  device.py  display.py  errors.py  functions.py  library.py  picoscope.py  ps2000.lib  ps2000.py  ps2000BlockExample.py
src/PLL_Lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
