[metadata]
name = PLL_Lib-StasiuWolanski
version = 0.0.1
author = Stasiu Wolanski
author_email = sw902@cam.ac.uk
description = Package for Cambridge Part II Experiment Phase Locked Loops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src