[metadata]
name = PLL_Lib
version = 1.0.0
author = Stasiu Wolanski
author_email = sw902@cam.ac.uk
description = Package for Cambridge Part II Experiment Phase Locked Loops
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Stasiu51/PLL_lib_project
project_urls =
    Bug Tracker = https://github.com/Stasiu51/PLL_lib_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyglet >=1.5.0
    numpy >=1.22.0
    pyserial >=3.5

[options.packages.find]
where = src